# pipplus

./: README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: pytest.yml  python-publish.yml
pipplus/: __init__.py  pipplus.py  pipplus_cmd_line.py
pipplus/actions/: args.py  help.py  init.py  parse_args.py  pipplus_command.py  run.py
pipplus/helpers/: func_logger.py
ppm/: __init__.py  ppm.py
ppm/actions/: __init__.py  args.py  ppm_command.py  run.py
tests/pipplus/: conftest.py  test_pipplus.py  test_pipplus_cmd_line.py
tests/pipplus/actions/: test_args.py  test_help.py  test_parse_args.py  test_pipplus_command.py  test_run.py
tests/pipplus/data/: pyproject.toml
tests/ppm/: conftest.py  test_ppm.py
tests/ppm/actions/: test_args.py  test_ppm_command.py  test_run.py
