[project]
name = "ppm"
version = "0.0.1"
author = "Adam Weeden"
author_email = "adamweeden@gmail.com"
description = "a package manager for python"
readme = "README.md"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/TheCleric/ppm"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
python_requires = ">=3"
keywords = "packages packaging"
install_requires = []
include_package_data = true

[project.extras_require]
dev = [
    "autopep8>=1.5.4",
    "setuptools>=40.8.0",
    "toml>=0.10.1"
]
test = [
    "pylint>=2.6.0",
    "pytest>=6.0.2",
    "mypy>=0.782",
    "pytest-cov>=2.10.1"
]

[project.entry_points]
console_scripts = [
    "ppm=ppm.ppm:main"
]

[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel>=0.35.1",
    "ppsetuptools>=0.9.2",
    "twine"
]
build-backend = "setuptools.build_meta"

[tool.ppm.scripts]
test = "pytest tests --doctest-modules --cov=ppm"
clean = "del /Q $PROJECT_ROOT\\build || del /Q $PROJECT_ROOT\\dist || del /Q $PROJECT_ROOT\\*.egg_info"
build = "ppm run clean && python setup.py sdist bdist_wheel && twine check dist/*"
