[project]
name = "pipplus"
version = "0.1.0"
author = "Adam Weeden"
author_email = "adamweeden@gmail.com"
description = "A pip addon that expands what's possible with python package management"
readme = "README.md"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/TheCleric/pipplus"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
python_requires = ">=3.6"
keywords = "packages packaging"
install_requires = [
    "toml>=0.10.1",
]
include_package_data = true

[project.extras_require]
dev = [
    "autopep8>=1.5.4",
    "isort>=5.5.4"
]
test = [
    "pylint>=2.6.0",
    "pytest>=6.0.2",
    "mypy>=0.782",
    "pytest-cov>=2.10.1",
    "setuptools>=40.8.0",
    "wheel>=0.35.1",
    "ppsetuptools>=0.9.2",
    "twine",
]

[project.entry_points]
console_scripts = [
    "ppm=pipplus.pipplus_cmd_line:main",
    "pipplus=pipplus.pipplus_cmd_line:main",
]

[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel>=0.35.1",
    "ppsetuptools>=0.9.2",
    "twine",
]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 120

[tool.coverage.report]
fail_under = 100

[tool.isort]
line_length = 120

[tool.pipplus.scripts]
autopep8    = "autopep8 -i -r pipplus tests setup.py"
build       = "ppm run clean && python setup.py sdist bdist_wheel && twine check dist/*"
validate    = "ppm run pylint && ppm run mypy && ppm run test && ppm run build"
clean       = "python setup.py clean --all"
format      = "ppm run isort && pipplus run autopep8"
install     = "pip install -e .[dev,test]"
install_all = "pip install -e .[dev,test]"
isort       = "isort --atomic pipplus tests setup.py"
mypy        = "mypy ."
precommit   = "ppm run format && ppm run validate"
pylint      = "pylint pipplus tests setup.py"
test        = "pytest tests --doctest-modules --cov=pipplus --cov-report term-missing"

[tool.pylint.pep8]
'max-line-length' = 120
'fail-under' = 10

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods"
]
